--- a/index.html
+++ b/index.html
@@ -19,5 +19,15 @@
   <h1>📄 Documentos disponibles</h1>
   <p>Próximamente encontrarás aquí los PDFs para descarga.</p>
 
+<h2>📂 Documentos disponibles</h2>
+
+<ul>
+  <li>
+    <a href="https://pdfstorageoscar2026.blob.core.windows.net/pdfs/Analisis%20Financiero.pdf" target="_blank">
+      📄 Descargar Análisis Financiero (PDF)
+    </a>
+  </li>
+</ul>
+
 </body>
 </html>
