--- a/index.html
+++ b/index.html
@@ -177,11 +177,11 @@
           <div class="pdf-title">
             <div class="icon">📄</div>
             <div>
-              <strong>Documento 2</strong>
+              <strong>IMAGEN 2</strong>
               <span>Archivo PDF</span>
             </div>
           </div>
-          <a class="btn" href="PON_AQUI_LA_URL_DEL_PDF_2" target="_blank">
+          <a class="btn" href="https://pdfstorageoscar2026.blob.core.windows.net/pdfs/IMAGEN%202.pdf"_blank">
             ⬇️ Descargar
           </a>
         </div>
