--- a/index.html
+++ b/index.html
@@ -191,11 +191,11 @@
           <div class="pdf-title">
             <div class="icon">📄</div>
             <div>
-              <strong>Documento 3</strong>
+              <strong>Analisis vertical</strong>
               <span>Archivo PDF</span>
             </div>
           </div>
-          <a class="btn" href="PON_AQUI_LA_URL_DEL_PDF_3" target="_blank">
+          <a class="btn" href="https://pdfstorageoscar2026.blob.core.windows.net/pdfs/Analisis%20Vertical.pdf" target="_blank">
             ⬇️ Descargar
           </a>
         </div>
